--- a/templates/galery.html
+++ b/templates/galery.html
@@ -51,7 +51,7 @@
     };
 
     function standby(id) {
-      document.getElementById(id).src = 'https://www.google.com/images/srpr/logo11w.png'
+      document.getElementById(id).src = '{{url_for('static', filename='img/camara/' + 00.jpg)}}''
   }
 </script>
 
