--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -104,6 +104,8 @@
 </script>
 
 <script>
+  var manualBool = document.getElementById("manualid");
+  manualBool.style.display = "block";
   var confirmaManual = document.getElementById("manualBTN");
   var manualBTN = document.getElementById("manual");
   var confirmaAuto = document.getElementById("autoBTN");
@@ -118,12 +120,14 @@
     autoBTN.style.display = "block";
     borraBTN.style.display = "block";
     manualBTN.style.display = "none";
+    manualBool.value = 1;
     document.getElementById("manualCerrar").click();
   }
   function myFunctionAuto() {
     autoBTN.style.display = "none";
     borraBTN.style.display = "none";
     manualBTN.style.display = "block";
+    manualBool.value = 0;
     document.getElementById("autoCerrar").click();
   }
 </script>
