--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -37,11 +37,11 @@
     date_string = YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
 
     // will output something like "2019-02-14 11:04:42"
-    if (out.estado == "0") {
+    /*if (out.estado == "0") {
       document.getElementById("manualmode").innerHTML = "";
     } else {
       document.getElementById("manualmode").innerHTML = "Modo Manual";
-    }
+    }*/
     document.getElementById("reloj").innerHTML = date_string;
 
     var t = setTimeout(startTime, 1000);
