--- a/templates/calendarScpMortal.html
+++ b/templates/calendarScpMortal.html
@@ -3,7 +3,6 @@
     var calendarEl = document.getElementById("calendar");
     var calendar = new FullCalendar.Calendar(calendarEl, {
       locale: "es",
-
       plugins: ["dayGrid", "timeGrid", "list", "interaction"],
       header: {
         left: "prev,next today",
@@ -11,24 +10,18 @@
         right: "dayGridMonth,timeGridWeek,timeGridDay,listWeek"
       },
       //defaultDate: { url: "today" },
-
       navLinks: true, // can click day/week names to navigate views
       editable: false,
       eventLimit: true, // allow "more" link when too many events
       eventTimeFormat: {
-        // like '14:30:00'
         hour: "2-digit",
         minute: "2-digit",
-
         meridiem: true
       },
       events: { url: "data" },
-
       eventClick: function(info, jsEvent, view) {
-        //H
         $("#tituloEvento").html(info.event.title);
         // Mostrar información de evento en los inputs
-
         $("#finEvento").val(info.event.end);
         $("#colorEvento").val(info.event.color);
         $("#idEvento").val(info.event.id);
@@ -37,38 +30,13 @@
         var end = event.end;
         var start = event.start;
         var id = info.event.id;
-        console.log(start);
-        console.log(typeof start);
+        // console.log(start);
+        // console.log(typeof start);
         $("#finEvento").val(end);
         $("#inicioEvento").val(start);
         $("#exampleModal").modal();
-        /*
-                var idE = info.event.id;
-                document.getElementById("btnBorrar").onclick = function() {
-                  doWork();
-                };
-
-                function doWork() {
-                  // ajax the JSON to the server
-                  $.post("deletEvent", idE, function() {});
-                  // stop link reloading the page
-                  event.preventDefault();
-                }
-                */
-
-        //$("#txtFechaI").val(typeof (info.start));
-        //$("#txtHoraI").val(FechaHora[1]);
-
-        //document.getElementById("txtFechaI").value = info.event.start
-        //lert("Event: " + info.event.title);
-        //alert("Coordinates: " + info.jsEvent.pageX + "," + info.jsEvent.pageY);
-        //alert("View: " + info.view.type);
-
-        // change the border color just for fun
-        //info.el.style.borderColor = "red";
       }
     });
-
     calendar.render();
   });
 </script>
