--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,8 +4,10 @@
     <div class="container">
       <!-- Grid row-->
       <div class="">
+        <!-- Grid column -->
         <div class="col-md-12 py-1 text-center ">
           <div class="mt-4 mb-5">
+            <!-- Facebook -->
             <a
               class="fb-ic "
               href="https://www.facebook.com/EII.ULPGC/"
@@ -14,6 +16,7 @@
               <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x ">
               </i>
             </a>
+            <!-- Twitter -->
             <a
               class="tw-ic"
               href="https://twitter.com/eii_ulpgc"
@@ -22,6 +25,8 @@
               <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x">
               </i>
             </a>
+
+            <!--Linkedin -->
             <a
               class="li-ic"
               href="https://www.linkedin.com/in/renato-sosa-garc%C3%ADa-6495a8190/"
@@ -30,6 +35,7 @@
               <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x">
               </i>
             </a>
+            <!--Instagram-->
             <a
               class="ins-ic"
               href="https://www.instagram.com/ulpgc_para_ti/"
@@ -40,15 +46,22 @@
             </a>
           </div>
         </div>
+        <!-- Grid column -->
       </div>
+      <!-- Grid row-->
     </div>
+    <!-- Footer Elements -->
   </footer>
 
   <!-- Footer -->
   <footer class="page-footer font-small mdb-color lighten-1 pt-1" id="f2">
+    <!-- Footer Links -->
     <div class="container text-center text-md-left">
+      <!-- Grid row -->
       <div class="row">
+        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-1 mb-1">
+          <!-- Content -->
           <h5 class="font-weight-bold text-uppercase mb-4">
             Sistema de Gestión de control de aguas
           </h5>
@@ -62,9 +75,15 @@
             voluptas nostrum.
           </p>
         </div>
+        <!-- Grid column -->
+
         <hr class="clearfix w-100 d-md-none" />
+
+        <!-- Grid column -->
         <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+          <!-- Links -->
           <h5 class="font-weight-bold text-uppercase mb-4">Sobre nosotros</h5>
+
           <ul class="list-unstyled">
             <li>
               <p>
@@ -104,12 +123,16 @@
           </ul>
         </div>
         <!-- Grid column -->
+
         <hr class="clearfix w-100 d-md-none" />
+
+        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
           <!-- Contact details -->
           <h5 class="font-weight-bold text-uppercase mb-4">
             Dirección y Contacto
           </h5>
+
           <ul class="list-unstyled">
             <li>
               <a
@@ -137,8 +160,16 @@
             </li>
           </ul>
         </div>
+        <!-- Grid column -->
+
         <hr class="clearfix w-100 d-md-none" />
+
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
     </div>
+    <!-- Footer Links -->
+
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3" id="f3">
       © 2019 Copyright:
@@ -146,5 +177,7 @@
         Escuela de Ingeniería Informática de la ULPGC.</a
       >
     </div>
+    <!-- Copyright -->
   </footer>
+  <!-- Footer -->
 </footer>
