--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 body {
   padding-right: 0px !important;
   margin-right: 0px !important;
-  background: url("https://images.pexels.com/photos/935871/pexels-photo-935871.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
+  background: url("https://images.pexels.com/photos/207301/pexels-photo-207301.jpeg")
     no-repeat fixed;
   background-size: cover;
   font-family: sans-serif;
