--- a/templates/main.html
+++ b/templates/main.html
@@ -19,9 +19,9 @@
   <div class="row ">
     <!-- Izquierda -->
     <!-- Centro -->
-    <div class=" fadeIn first">
+    <div class=" fadeIn first  shadow-lg ">
       <ul class="list-group ">
-        <li class="list-group-item bg-primary rounded text-white">
+        <li class="list-group-item bg-primary rounded  text-white">
           Estado actual del Sistema
         </li>
         <li class="list-group-item bg-light text-info">
