--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url("https://images.pexels.com/photos/1901028/pexels-photo-1901028.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260")
+  background: url("https://images.pexels.com/photos/1901028/pexels-photo-1901028.jpeg")
     no-repeat fixed;
   background-size: cover;
   font-family: sans-serif;
