--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -154,12 +154,16 @@
   }
 
   function actualiza(results) {
-    // console.log(results);
-    var dataset = prepara(results);
-    chart.data.datasets = dataset;
-    //chart.options.tooltips.callbacks.label = item =>
-    // `${item.yLabel} ` + results.unidad;
-    chart.update();
+    console.log(results.unidad);
+    if (result.unidad == 0) {
+      alert("El muestreo debe establecerse entre 3 y 1000");
+    } else {
+      var dataset = prepara(results);
+      chart.data.datasets = dataset;
+      //chart.options.tooltips.callbacks.label = item =>
+      // `${item.yLabel} ` + results.unidad;
+      chart.update();
+    }
   }
 
   function giveData(datas, fechas) {
