--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -155,7 +155,7 @@
 
   function actualiza(results) {
     console.log(results.unidad);
-    if (result.unidad == 0) {
+    if (results.unidad == 0) {
       alert("El muestreo debe establecerse entre 3 y 1000");
     } else {
       var dataset = prepara(results);
