--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -156,7 +156,7 @@
   }
 
   function actualiza(results) {
-    console.log(results.unidad);
+    //console.log(results.unidad);
     if (results.unidad == 0) {
       alert("El muestreo debe establecerse entre 3 y 1000");
     } else {
