--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -183,6 +183,6 @@
   defer
 ></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
-<script src="https://www.chartjs.org/dist/2.8.0/Chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
 <script src="https://www.chartjs.org/samples/latest/utils.js"></script>
 {% include "estadisticasScp.html" %} {% endblock %}
